# insulet-atlassian-mcp-guardrails

./: .env.example  .gitignore  README.md  cursor_mcp_config.json  pyproject.toml
atlassian_mcp_guardrails/: __init__.py  __main__.py  auth.py  config.py  context.py  guardrails.py  server.py
atlassian_mcp_guardrails/confluence/: client.py  models.py
atlassian_mcp_guardrails/jira/: adf_extractor.py  client.py  field_discovery.py  models.py
atlassian_mcp_guardrails/tools/: confluence_tools.py  health_tools.py  jira_tools.py
docs/: ADMIN.md  CURSOR_SETUP.md  GUARDRAILS.md  SETUP.md  TOOLS.md  TROUBLESHOOTING.md
tests/: conftest.py  test_adf_extractor.py  test_auth.py  test_config.py  test_confluence_client.py  test_coverage_scorer.py  test_guardrails.py  test_jira_client.py  test_jira_deep.py  test_tools.py  test_traversal.py
